chang param to query param
